Attack reduces hit points by 10

--- a/views/play.erb
+++ b/views/play.erb
@@ -1,4 +1,4 @@
-<h1><%= @player_1 %> vs <%= @player_2 %></h1>
-<%= @player_2 %>: 100HP
+<h1><%= @player_1.name %> vs <%= @player_2.name %></h1>
+<%= @player_2.name %>: 100HP
 <br>
 <a href="/confirmation">Attack</a>
