--- a/views/confirmation.erb
+++ b/views/confirmation.erb
@@ -1,1 +1,3 @@
-<%= @player_1 %> attacked <%= @player_2 %>
+<%= @player_1.name %> attacked <%= @player_2.name %>
+<br>
+<%= @player_2.name %>: <%= @player_2.hit_points %>HP 
